# ecommerce

./: .coveragerc  Dockerfile  docker-compose.yaml  pyproject.toml  pytest.ini
.github/workflows/: docker-image.yml
code/: manage.py
code/ecommerce/: __init__.py  asgi.py  db_routers.py  middleware.py  settings.py  urls.py
code/orders/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
code/orders/migrations/: 0001_initial.py  0002_initial.py  0003_alter_order_options_alter_orderitem_options_and_more.py
code/products/: admin.py  consumers.py  models.py  routing.py  serializers.py  signals.py  urls.py  views.py
code/products/migrations/: 0001_initial.py  0002_product_is_active.py  0003_product_is_top.py  0004_product_image.py  0005_remove_category_name_category_name_en_and_more.py
code/users/: admin.py  constants.py  exceptions.py  models.py  repositores.py  serializers.py  services.py  urls.py  views.py
code/users/fixtures/: users.json
code/users/migrations/: 0001_initial.py  0002_city_country_address_city_country.py  0003_addressanalytics_remove_city_name_city_name_en_and_more.py
locale/en/LC_MESSAGES/: django.po
locale/kk/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
tests/: conftest.py  helpers.py
tests/data/users/repositories/create_user/base/: payload.json
tests/data/users/services/create_user/base/: payload.json  session.json
tests/data/users/views/base/: payload.json
tests/data/users/views/wrong/: payload.json
tests/users/: test_user_repositories.py  test_user_services.py  test_user_views.py
(+1 files in other folders)
